--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ googleAnalytics = "UA-2252822-9"
 	
 	# Personal settings
 	
-  #name = "Rahul Menon"
+  name = "Rahul Menon"
 	#position = "Automator"
 	
 	# Extra stuff
